--- a/src/components/Issue/Issue.scss
+++ b/src/components/Issue/Issue.scss
@@ -1,8 +1,12 @@
 .gh-issue {
     display: flex;
-    border: 1px solid #e1e4e8;
+    border-bottom: 1px solid #e1e4e8;
     background-color: #fff;
     transition: background-color 0.3s;
+
+    &:last-of-type {
+        border-bottom: none;
+    }
 
     &:hover {
         background-color: #f4f7f9;
@@ -62,11 +66,34 @@
         }
     }
 
-    &__comments {
-        flex-shrink: 0;
-        box-sizing: border-box;
-        min-width: 40px;
-        padding: 8px 16px 0 0;
-        color: #24292e;
+    &__assignees-and-messages {
+        display: flex;
+        justify-content: flex-end;
+        width: calc(2 / 12 * 100%);
+
+        &__assignee-container {
+            display: flex;
+            padding: 8px 16px 0 0;
+
+            & .assignee {
+                width: 20px;
+                height: 20px;
+
+                & > img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50px;
+                    background-position: center;
+                }
+            }
+        }
+
+        &__comments {
+            flex-shrink: 0;
+            box-sizing: border-box;
+            min-width: 40px;
+            padding: 8px 16px 0 0;
+            color: #24292e;
+        }
     }
 }
