--- a/src/components/RepoNav/RepoNav.scss
+++ b/src/components/RepoNav/RepoNav.scss
@@ -3,18 +3,25 @@
     align-items: center;
 
     & a {
+        display: flex;
+        align-items: center;
         padding: 5px 16px;
+        font-size: 14px;
         font-weight: 500;
         line-height: 20px;
         color: #24292e;
-        border: 1px solid #e1e4e8;
         text-decoration: none;
+        border: 1px solid #e1e4e8;
 
         &:nth-of-type(1) {
             border-radius: 6px 0px 0px 6px;
         }
         &:nth-of-type(2) {
             border-radius: 0px 6px 6px 0px;
+        }
+
+        & > p {
+            margin: 0 0 0 4px;
         }
 
         & .gh-count {
